[package]
name = "page-util"
version = "0.1.0"
edition = "2021"

[dependencies]
async-backtrace = "^0.2"
async-graphql-4 = { package = "async-graphql", version = "4", features = ["chrono"], optional = true }
async-graphql-5 = { package = "async-graphql", version = "5", features = ["chrono"], optional = true }
async-graphql-6 = { package = "async-graphql", version = "6", features = ["chrono"], optional = true }
async-trait = "^0.1"
cast_trait_object = "0.1"
cfg-if = "1"
chrono = { version = "^0.4", features = ["serde"] }
convert_case = "^0.6"
derivative = "2"
derive_more.git = "https://github.com/tlowerison/derive_more"
diesel = { version = "2", features = ["chrono"], optional = true }
dyn-clone = "1.0"
either = "1"
futures = "^0.3"
indexmap = "2"
itertools = "^0.10"
lazy_static = "1"
once_cell = "1"
paste = "1"
proc-macro2 = "1"
proc-macro-util = { git = "https://github.com/tlowerison/proc-macro-util", rev = "b93d2c5" }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync"] }
typed-builder = "0.12"
uuid = { version = "1", features = ["serde", "v4"] }

[features]
default = []
async-graphql-4 = ["dep:async-graphql-4"]
async-graphql-5 = ["dep:async-graphql-5"]
async-graphql-6 = ["dep:async-graphql-6"]
diesel = ["dep:diesel"]
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
