[package]
name = "page-util"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
async-graphql-4 = { package = "async-graphql", version = "4", features = ["chrono"], optional = true }
async-graphql-5 = { package = "async-graphql", version = "5", features = ["chrono"], optional = true }
async-graphql-6 = { package = "async-graphql", version = "6", features = ["chrono"], optional = true }
cfg-if = "1"
chrono = { version = "^0.4", features = ["serde"] }
derivative = { version = "2", optional = true }
derive_more.git = "https://github.com/tlowerison/derive_more"
diesel = { version = "2", features = ["chrono"], optional = true }
dyn-clone = { version = "1.0", optional = true }
either = { version = "1", optional = true }
itertools = { version = "^0.10", optional = true }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"], optional = true }

[features]
default = []
async-graphql-4 = ["dep:async-graphql-4"]
async-graphql-5 = ["dep:async-graphql-5"]
async-graphql-6 = ["dep:async-graphql-6"]
diesel = ["dep:derivative", "dep:diesel", "dep:itertools", "dep:dyn-clone", "dep:either", "dep:uuid"]
mysql = ["diesel/mysql"]
postgres = ["diesel/postgres"]
sqlite = ["diesel/sqlite"]
